
  * [all]: ?architecture search terms now support using specification
           strings and wildcards (for example, “linux-any”) as defined
           in Debian Policy § 11.1 “Architecture specification
           strings”.

  * [all]: Support downloading changelogs for packages on
           third-party sites by guessing the URI. (LP: #563155)
           
- Minor bugs:

  * handle "-qq" like other apt-utils
  * properly process all -o command line options (Closes: #587671)
  * unknown command line options trigger an error (Closes: #434502)
  * --add-user-tag-to, --remove-user-tag-from are working;
    no bug reports suggests that noone has noticed they
    were broken, but they work now anyway

  * [cmdline]: Virtual packages which have an already
               installed provider are only skipped when the
               requested action is to install them.

  * [cmdline]: search exit with status 1 if it found no
               matches (Closes: #497299)

  * [cmdline]: why exits with status 1 if it found no
               reasons given the particular arguments

  * [cmdline]: Package arguments without an arch-qualifier
               will also consider foreign-arch packages, in
               order of preference.  (LP: #892074)

  * [cmdline]: Package arguments can use '*' wildcard in their
               arch-qualifier to select all matching packages,
               where 'any' would select only the first such
               package.

  * [all]: use up-to-date changelog uri construction from apt-get
           using APT::Changelogs::Server

  * [all]: drop disused Aptitude::Changelog-URL-Template

  * [cmdline]: update to changelog logic:
               - remove extraneous guess-work with source packages,
                 which happened to also download the wrong changelog
                 sometimes (Closes: #631464)
               - changelog download works with no deb-src lines, so
                 we don't need to instruct the user to add any